<?xml version="1.0" encoding="utf-8"?>
<com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/list_item_content_spacing">

    <com.undabot.android.blog.constraintlayout.custom.CustomRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false">

        <com.undabot.android.blog.constraintlayout.custom.AspectRatioImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:scaleType="centerCrop"
            app:aspectRatio="2.5"
            app:aspectRatioEnabled="true"
            app:dominantMeasurement="width"
            tools:layout_height="120dp"
            tools:src="@drawable/lead_image"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomFloatingActionButton
            android:id="@+id/action_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignBaseline="@+id/image_bottom_guideline"
            android:layout_alignBottom="@+id/image_bottom_guideline"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_star_border"
            app:fabSize="mini"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomView
            android:id="@+id/image_bottom_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/image"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomImageView
            android:id="@+id/profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/image"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/undabot_logo"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/profile_image"
            android:layout_toRightOf="@+id/profile_image"
            android:lines="1"
            android:paddingTop="2dp"
            android:text="Name Surname"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomTextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_toRightOf="@+id/profile_image"
            android:lines="1"
            android:text="Two minutes ago"
            android:textSize="12sp"
            android:textStyle="italic"/>

    </com.undabot.android.blog.constraintlayout.custom.CustomRelativeLayout>

    <com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.undabot.android.blog.constraintlayout.custom.CustomTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="Title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomTextView
            android:id="@+id/comments_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/list_item_content_spacing"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:text="@string/comments_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintLeft_toRightOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_goneMarginTop="20dp"/>

    </com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout>

    <com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_content_spacing">

        <com.undabot.android.blog.constraintlayout.custom.CustomTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="5"
            android:paddingRight="10dp"
            android:text="@string/description"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomTextView
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:lineSpacingExtra="8dp"
            android:maxLines="3"
            android:paddingLeft="10dp"
            android:text="@string/last_comment"
            android:textSize="12sp"
            android:textStyle="italic"/>

    </com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout>

    <com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.undabot.android.blog.constraintlayout.custom.CustomButton
            android:id="@+id/hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_button_text"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomButton
            android:id="@+id/btn_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_item_content_spacing"
            android:paddingRight="@dimen/list_item_content_spacing"
            android:text="@string/comment_button_text"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimary"/>

        <com.undabot.android.blog.constraintlayout.custom.CustomButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button_text"/>

    </com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout>

</com.undabot.android.blog.constraintlayout.custom.CustomLinearLayout>